fix: correct docker build b62c12930ca927844689c723ca1c33942cb4868b

--- a/changelog.html
+++ b/changelog.html
@@ -37,8 +37,13 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
-<h2 id="100-2023-04-03">1.0.0 (2023-04-03)</h2>
+<h3 id="101-2023-04-03"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.0...v1.0.1">1.0.1</a> (2023-04-03)</h3>
 <h3 id="🔁-continuous-integration">🔁 Continuous Integration</h3>
+<ul>
+<li>fix container deployment path (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a58ec197e17f65736f2f7551c881c2da70d90e7a">a58ec19</a>)</li>
+</ul>
+<h2 id="100-2023-04-03">1.0.0 (2023-04-03)</h2>
+<h3 id="🔁-continuous-integration-1">🔁 Continuous Integration</h3>
 <ul>
 <li>implement release tooling (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3e35dc9b5a7ae1bfd8a1ac404593d57b83e8aac4">3e35dc9</a>)</li>
 </ul>
