fix: correct top repositories distribution and name concatenation 24bfb159bbe9c43e631432c69189f0ffba0c7c11

--- a/injectables/GithubService.html
+++ b/injectables/GithubService.html
@@ -385,6 +385,8 @@ export class GithubService {
       }
     }&#x60;);
 
+    this.logger.debug(&#x60;Rate limit: ${JSON.stringify(rateLimit)}&#x60;);
+
     return rateLimit;
   }
 }
