fix: correct user name being displayed as login 19043fc359597bfa31f9e1bdc864c1a18a486fc1

--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,19 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h2 id="110-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.4...v1.1.0">1.1.0</a> (2023-04-04)</h2>
+<h3 id="📝-documentation">📝 Documentation</h3>
+<ul>
+<li>correct readme with new style (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/ccc8a96399322265affdaefb65b2e96f557943ab">ccc8a96</a>)</li>
+</ul>
+<h3 id="🤖-build-system">🤖 Build System</h3>
+<ul>
+<li>remove extraneous colors package (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/4c7d29aa9ad9a7fe79c30fb79ed3e57b971fa9a5">4c7d29a</a>)</li>
+</ul>
+<h3 id="🍕-features">🍕 Features</h3>
+<ul>
+<li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
+</ul>
 <h3 id="104-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.3...v1.0.4">1.0.4</a> (2023-04-04)</h3>
 <h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
 <ul>
@@ -62,11 +75,11 @@
 <ul>
 <li>implement release tooling (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3e35dc9b5a7ae1bfd8a1ac404593d57b83e8aac4">3e35dc9</a>)</li>
 </ul>
-<h3 id="📝-documentation">📝 Documentation</h3>
+<h3 id="📝-documentation-1">📝 Documentation</h3>
 <ul>
 <li>add partial readme (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/3b5d8381547356c57fc1aab8087fb37fbcc320be">3b5d838</a>)</li>
 </ul>
-<h3 id="🤖-build-system">🤖 Build System</h3>
+<h3 id="🤖-build-system-1">🤖 Build System</h3>
 <ul>
 <li>enable local development and transpilation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/6893d90d4fd9ef0e99bb115a05d31d06bc509398">6893d90</a>)</li>
 <li>make package able to release (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c2cc28c55652a4ac81e1dc81b8588e74458a8cb9">c2cc28c</a>)</li>
@@ -77,7 +90,7 @@
 <li>move to nextjs backend architecture static component functions and boilerplate (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/d4f854d4d5cee998e6495753a44dc006547a32bd">d4f854d</a>)</li>
 <li>rewrite code and correct buffers (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/c12099a219b529250ba6fb8527911c4972d344d4">c12099a</a>)</li>
 </ul>
-<h3 id="🍕-features">🍕 Features</h3>
+<h3 id="🍕-features-1">🍕 Features</h3>
 <ul>
 <li>add development tooling and backend configuration (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/f1f5947c4b97829f8e17e56bd4c8c4aab5bd4c63">f1f5947</a>)</li>
 <li>add dynamic image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/5797c5447edbe4dd1923fecf3af72c169cc7b781">5797c54</a>)</li>
