--- a/changelog.html
+++ b/changelog.html
@@ -37,6 +37,11 @@
 <blockquote>
 <p>All notable changes to this project will be documented in this file</p>
 </blockquote>
+<h3 id="111-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.1.0...v1.1.1">1.1.1</a> (2023-04-04)</h3>
+<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<ul>
+<li>correct user name being displayed as login (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/19043fc359597bfa31f9e1bdc864c1a18a486fc1">19043fc</a>)</li>
+</ul>
 <h2 id="110-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.4...v1.1.0">1.1.0</a> (2023-04-04)</h2>
 <h3 id="📝-documentation">📝 Documentation</h3>
 <ul>
@@ -51,17 +56,17 @@
 <li>add correct languages calculation and display (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/977df7589d67e6987cd9cb4e6528a86f46470541">977df75</a>)</li>
 </ul>
 <h3 id="104-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.3...v1.0.4">1.0.4</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
 <ul>
 <li>correct top repositories distribution and name concatenation (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/24bfb159bbe9c43e631432c69189f0ffba0c7c11">24bfb15</a>)</li>
 </ul>
 <h3 id="103-2023-04-04"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.2...v1.0.3">1.0.3</a> (2023-04-04)</h3>
-<h3 id="🐛-bug-fixes-1">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
 <ul>
 <li>remove static assets, get gfonts roboto versions (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/dd096caba732f9ccdc11d1b280cd18cf442327cb">dd096ca</a>)</li>
 </ul>
 <h3 id="102-2023-04-03"><a href="https://github.com/open-sauced/opengraph.opensauced.pizza/compare/v1.0.1...v1.0.2">1.0.2</a> (2023-04-03)</h3>
-<h3 id="🐛-bug-fixes-2">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
 <ul>
 <li>correct docker build (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/b62c12930ca927844689c723ca1c33942cb4868b">b62c129</a>)</li>
 </ul>
@@ -105,7 +110,7 @@
 <li>use node https instead of axios (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/12b86a7ecbbe53308bc95526f9f72593ea430200">12b86a7</a>)</li>
 <li>User Profile cards (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/issues/5">#5</a>) (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/64372f4fb75589cd9c633c79b9e2029c3ac8cab1">64372f4</a>)</li>
 </ul>
-<h3 id="🐛-bug-fixes-3">🐛 Bug Fixes</h3>
+<h3 id="🐛-bug-fixes-4">🐛 Bug Fixes</h3>
 <ul>
 <li>add awaits (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/14a5e2804c497c9938d5595879e2f9b9d54d6054">14a5e28</a>)</li>
 <li>correct application return type image (<a href="https://github.com/open-sauced/opengraph.opensauced.pizza/commit/a0e6d3f55e43e326c8a4bf8a31d027b41040b37d">a0e6d3f</a>)</li>
