--- a/coverage.html
+++ b/coverage.html
@@ -82,6 +82,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#DigitalOceanConfig">src/config/digital-ocean.config.ts</a>
+            </td>
+            <td>variable</td>
+            <td>DigitalOceanConfig</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#GitHubConfig">src/config/github.config.ts</a>
             </td>
             <td>variable</td>
@@ -142,6 +154,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/S3FileStorageService.html">src/s3-file-storage/s3-file-storage.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>S3FileStorageService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./controllers/SocialCardController.html">src/social-card/social-card.controller.ts</a>
             </td>
             <td>controller</td>
@@ -160,7 +184,7 @@
             <td>SocialCardService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/4)</span>
+                <span class="coverage-count">(0/5)</span>
             </td>
         </tr>
         <tr class="low">
