--- a/properties.html
+++ b/properties.html
@@ -51,7 +51,7 @@
     </ol>
     <ul class="properties-list">
         <li>
-            <b>Version</b> : 1.1.1</li>
+            <b>Version</b> : 1.2.0-beta.2</li>
         <li>
             <b>Description</b> : OpenGraph dot Open Sauced is a general purpose social card generator</li>
         <li>
